# adb

./: .gitignore  CMakeLists.txt  README.md  build.py  get_source.py  repos.json
.github/workflows/: build.yml
.windsurf/rules/: env.md
lib/: CMakeLists.txt  libandroidfw.cmake  libdiagnoseusb.cmake  libmdnssd.cmake  libopenscreen.cmake  libselinux.cmake  libusb.cmake
patches/misc/: IncrementalProperties.sysprop.cpp  protobuf_config.h
platform-tools/: CMakeLists.txt  adb.cmake
